# Handwritten-recognition-using-LeapMotion-and-OpenCV

./: CMakeLists.txt  README.md  knn_OpenCV.cpp  main.cpp  main_LOOCV.cpp  test_dft.cpp
2D_Data/: 3F_2d.txt  3H_2d.txt  3R_2d.txt  3S_2d.txt  5F_2d.txt  5H_2d.txt  5R_2d.txt  5S_2d.txt  6F_2d.txt  6H_2d.txt  6R_2d.txt  6S_2d.txt  7F_2d.txt  7H_2d.txt  7R_2d.txt  7S_2d.txt  8F_2d.txt  8H_2d.txt  8R_2d.txt  8S_2d.txt  9F_2d.txt  9H_2d.txt  9R_2d.txt  9S_2d.txt
Final Numbers/Alex Numbers/: 0_A.txt  1_A.txt  2_A.txt  3_A.txt  4_A.txt  5_A.txt  6_A.txt  7_A.txt  8_A.txt  9_A.txt
Final Numbers/Andrew Numbers/: 0_AD.txt  1_A.txt  2_A.txt  3_A.txt  4_A.txt  5_A.txt  6_A.txt  7_A.txt  8_A.txt  9_A.txt
Final Numbers/Carlos Numbers/: 1_C.txt  2_C.txt  3_C.txt  4_C.txt  5_C.txt  6_C.txt  7_C.txt  8_C.txt  9_C.txt
Final Numbers/Cedric Numbers/: 0_C.txt  1_C.txt  2_C.txt  3_C.txt  4_C.txt  5_C.txt  6_C.txt  7_C.txt  8_C.txt  9_C.txt
Final Numbers/Fred Numbers/: 0_F.txt  1_F.txt  2_F.txt  3_F.txt  4_F.txt  5_F.txt  6_F.txt  7_F.txt  8_F.txt  9_F.txt
Final Numbers/Holly Numbers/: 0_H.txt  1_H.txt  2_H.txt  3_H.txt  4_H.txt  5_H.txt  6_H.txt  7_H.txt  8_H.txt  9_H.txt
Final Numbers/James Numbers/: 0_J.txt  1_J.txt  2_J.txt  3_J.txt  4_J.txt  5_J.txt  6_J.txt  7_J.txt  8_J.txt  9_J.txt
Final Numbers/Jeremiah Numbers/: 1_J.txt  2_J.txt  3_J.txt  4_J.txt  5_J.txt  6_J.txt  7_J.txt  8_J.txt  9_J.txt
Final Numbers/Russ Numbers/: 0_R.txt  1_R.txt  2_R.txt  3_R.txt  4_R.txt  5_R.txt  6_R.txt  7_R.txt  8_R.txt  9_R.txt
Final Numbers/Sean Numbers/: 0_S.txt  1_S.txt  2_S.txt  (+7 more)
(+20 files in other folders)
