cmake_minimum_required(VERSION 2.8)
project(project_rt CXX)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories(/home/david/Libraries/LeapDeveloperKit_2.2.5+26752_linux/LeapSDK/include)
link_directories(/home/david/Libraries/LeapDeveloperKit_2.2.5+26752_linux/LeapSDK/lib/x64/)
find_package( OpenCV REQUIRED )
add_executable( leapknn_rt main.cpp )
#target_link_libraries( loocv Leap ${OpenCV_LIBS} )
target_link_libraries( leapknn_rt Leap ${OpenCV_LIBS} )
